--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -24,6 +24,9 @@ jobs:
       - name: Lint with black
         run: |
           poetry run black --check .
+      - name: Lint with flake8
+        run: |
+          poetry run flake8 .
       - name: Lint with isort
         run: |
           poetry run isort --check .
