--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "flake8-github"
-version = "1.0.2"
+version = "1.0.3a0"
 description = "Flake8 formatter for GitHub Actions"
 authors = ["Max Kryvych <me@kryvych.cc>"]
 license = "MIT License"
