--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -16,32 +16,11 @@ jobs:
       - uses: actions/setup-python@v4
         with:
           python-version: "3.x"
-
-      - name: deps
-        run: python -m pip install -U poetry
-
-      - name: build
-        run: poetry build
-
-      - name: mint API token
-        id: mint-token
+      - name: Install dependencies
         run: |
-          # retrieve the ambient OIDC token
-          resp=$(curl -H "Authorization: bearer $ACTIONS_ID_TOKEN_REQUEST_TOKEN" \
-            "$ACTIONS_ID_TOKEN_REQUEST_URL&audience=pypi")
-          oidc_token=$(jq '.value' <<< "${resp}")
-
-          # exchange the OIDC token for an API token
-          resp=$(curl -X POST https://pypi.org/_/oidc/github/mint-token -d "{\"token\": \"${oidc_token}\"}")
-          api_token=$(jq '.token' <<< "${resp}")
-
-          # mask the newly minted API token, so that we don't accidentally leak it
-          echo "::add-mask::${api_token}"
-
-          # see the next step in the workflow for an example of using this step output
-          echo "api-token=${api_token}" >> "${GITHUB_OUTPUT}"
-
-      - name: publish
-        run: |
-          poetry config pypi-token.pypi ${{ steps.mint-token.outputs.api-token }}
-          poetry publish
+          python -m pip install --upgrade pip
+          pip install poetry
+      - name: Configure poetry
+        run: poetry config pypi-token.pypi "${{ secrets.PYPI_API_KEY }}"
+      - name: Publish package
+        run: poetry publish --build
